--- a/results.html
+++ b/results.html
@@ -9,25 +9,26 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-   <div class="columns">
-    <div class="column">
+   <div class="columns is-flex">
+    <div class="column has-background-grey">
     <form class="box" id="brewContainer">
         <div class="field">
           <label class="label"></label>
           <div class="control">
             <input class="input" type="" placeholder="Search Breweries">
+            <button class="button is-medium is-outlined">Search</button>
           </div>
           </div>
         </div>
-      
-        <button class="button is-primary">Search</button>
       </form>
     <section >
         <div class="brewData"></div>
         
     </section>
-</div>  
-<div class="columns">
+<div class="column has-background-grey">
+    <div class="box">
+        I'm in a box.
+      </div>
     <section id="weatherContainer">
         <div class="weatherData"></div>
     </section>
