--- a/results.html
+++ b/results.html
@@ -16,14 +16,16 @@
           <label class="label"></label>
           <div class="control">
             <input class="input" type="" placeholder="Search Breweries">
-            <button class="button is-medium is-outlined">Search</button>
+            <button class="button is-medium is-primary">Search</button>
+            <div class="brewData 	has-text-left"></div>
           </div>
           </div>
         </div>
-      </form>
-    <section >
-        <div class="brewData"></div>
         
+      </form>
+   
+    <section >
+       
     </section>
 <div class="column has-background-grey">
     <div class="box">
@@ -34,7 +36,7 @@
     </section>
 </div>  
 
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
