added results.css styling

--- a/results.html
+++ b/results.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="./assets/css/results.css">
 </head>
 <body>
-   <div class="columns is-flex">
+   <div class="column is-flex">
     <div class="column has-background-grey">
     <form class="box" id="brewContainer">
         <div class="field">
           <label class="label"></label>
           <div class="control">
-            <input class="input" type="" placeholder="Search Breweries">
+            <input class="input" type="text" placeholder="Search Breweries">
             <button class="button is-medium is-outlined">Search</button>
             <div class="brewData"></div>
           </div>
