--- a/results.html
+++ b/results.html
@@ -21,13 +21,8 @@
           </div>
           </div>
         </div>
-        
       </form>
-   
-    <section >
-       
-    </section>
-<div class="column has-background-grey">
+  <div class="column">
     <div class="box">
         I'm in a box.
       </div>
