--- a/results.html
+++ b/results.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="column is-flex">
-    <div class="column has-background-grey">
+    <div class="column has-background-blue">
     <form class="box" id="brewContainer">
         <div class="field">
           <label class="label"></label>
@@ -27,12 +27,13 @@
     <section >
        
     </section>
-<div class="column has-background-grey">
+<div class="column">
     <div class="box">
         I'm in a box.
       </div>
     <section id="weatherContainer">
         <div class="weatherData"></div>
+        <h1>Weather Conditions</h1>
     </section>
 </div>  
 
