--- a/results.html
+++ b/results.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/results.css">
 </head>
 <body>
-   <div class="column is-flex">
+   <div class="columns is-flex">
     <div class="column has-background-blue">
     <form class="box" id="brewContainer">
         <div class="field">
@@ -27,7 +27,7 @@
     <section >
        
     </section>
-<div class="column">
+<div class="column is-flex">
     <div class="box">
         I'm in a box.
       </div>
