added css styling

--- a/results.html
+++ b/results.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/results.css">
 </head>
 <body>
-   <div class="column is-flex">
+   <div class="columns is-flex">
     <div class="column has-background-grey">
     <form class="box" id="brewContainer">
         <div class="field">
