--- a/results.html
+++ b/results.html
@@ -10,30 +10,30 @@
 </head>
 <body>
    <div class="columns is-flex">
-    <div class="column has-background-grey">
-    <form class="box" id="brewContainer">
+    <div class="column is-half has-background-grey">
+      <form class="box" id="brewContainer">
         <div class="field">
           <label class="label"></label>
           <div class="control">
             <input class="input" type="" placeholder="Search Breweries">
             <button class="button is-medium is-primary">Search</button>
-            <div class="brewData 	has-text-left"></div>
+            <div class="brewData has-text-left"></div>
           </div>
-          </div>
+        </div>
         
       </form>
-   
-    <section >
+    </div>  
+      <section >
        
-    </section>
-<div class="column has-background-grey">
-    <div class="box">
+      </section>
+    <div class="column is-half has-background-grey">
+      <div class="box">
         I'm in a box.
       </div>
     <section id="weatherContainer">
         <div class="weatherData"></div>
     </section>
-</div>  
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
