--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="field">
                     <label class="label"></label>
                     <div class="control">
-                      <input class="input" type="" placeholder="Search Breweries">
+                      <input class="input" type="" placeholder="Search City">
                       <button class="button is-medium is-primary">Search</button>
                       <div class="brewData has-text-left"></div>
                     </div>
