--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="control">
                       <input class="input" type="" placeholder="Search Breweries">
                       <button class="button button-search-city is-medium is-primary">Search</button>
-                      <button class="button button-location is-medium is-primary" id="location-button">Search By Location</button>
+                      <button class="button button-location is-medium is-primary">Search By Location</button>
                       <div class="brewData has-text-left"></div>
                     </div>
                   </div>
