--- a/results.html
+++ b/results.html
@@ -37,13 +37,18 @@
     </div>
 </div>  
 </div>
-      <!-- <section>
-      </section>
-      <div class="column is-half has-background-grey">
-      <section id="weatherContainer">
-        <div class="weatherData"></div>
-    </section>
-  </div> -->
+<div id="modal-js-example" class="modal custom-modal">
+  <div class="modal-background"></div>
+
+  <div class="modal-content">
+    <div class="box">
+      <p>Modal JS example</p>
+      <!-- Your content -->
+    </div>
+  </div>
+
+  <button class="modal-close is-large" aria-label="close"></button>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
