--- a/results.html
+++ b/results.html
@@ -22,6 +22,7 @@
             <div class="control">
               <input class="input" type="text" placeholder="Search Breweries">
               <button class="button is-medium is-primary" id="city-button">Search</button>
+              <button class="column is-2 button button-location is-medium is-primary mr-2 my-3" id="location-button">Near Me</button>
               <div class="select">
                 <select id="brewTypeOption">
                   <option value="" disabled selected>Filter by Type of Brewery</option>
