Added modal to the results page and used favorites.js.

--- a/results.html
+++ b/results.html
@@ -36,6 +36,9 @@
                   <option value="contract">Contract</option>
                   <option value="all">All</option>
                 </select>
+                <button class="js-modal-trigger button is-primary" data-target="modal-custom" id="favorite-btn">
+                    Open JS example modal
+                  </button>
               </div>
               <div class="brewData has-text-centered"></div>
             </div>
@@ -58,7 +61,7 @@
       <section>
        
       </section>
-      <div id="modal-js-example" class="modal custom-modal">
+      <div id="modal-custom" class="modal custom-modal">
         <div class="modal-background"></div>
         <div class="modal-content">
           <div class="box">
@@ -70,6 +73,8 @@
       </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
+   
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/favorites.js"></script>
 </body>
 </html>
