Fixed local Storage bug after refreshing the page.

--- a/results.html
+++ b/results.html
@@ -42,7 +42,9 @@
                     Favorites
                   </button>
               </div>
-              <div class="brewData has-text-centered"></div>
+              <div class="brewData has-text-centered">
+                  <h3 id="brew-data-number-results"></h3>
+              </div>
             </div>
           </div>
         </form>
@@ -55,6 +57,7 @@
       <h1 class="weatherHeader">Weather Conditions</h1>
       <section id="weatherContainer">
           <div class="weatherData"></div>
+          <div class="forecastData"></div>
       </section>
     </div>
    
