--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Brewery Search</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Outfit:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Train+One&family=Outfit:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -24,10 +24,10 @@
                     <label class="label"></label>
                     <div class="control columns is-flex">
                       <input class="input column is-4 mx-3 my-3" type="" placeholder="Search Breweries by City">
-                      <button class="column is-2 button button-search-city is-medium is-info mr-2 my-3">Search</button>
-                      <button class="column is-2 button button-location is-medium is-primary mr-2 my-3" id="location-button">Search Near Me</button>
-                      <div class="select mr-2 my-3">
-                        <select id="brewTypeOption">
+                      <button class="column is-2 button button-search-city is-rounded has-text-weight-bold is-medium is-warning ml-2 my-3">Search</button>
+                      <button class="column is-2 button button-location is-rounded has-text-weight-bold is-medium is-warning ml-4 my-3" id="location-button">Search Near Me</button>
+                      <div class="select select is-large ml-5 my-3">
+                        <select class="" id="brewTypeOption">
                           <option value="" disabled selected>Filter by Type of Brewery</option>
                           <option value="micro">Micro</option>
                           <option value="nano">Nano</option>
