--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       <input class="input column is-4 mx-3 my-3" type="" placeholder="Search Breweries by City">
                       <button class="column is-2 button button-search-city is-medium is-info mr-2 my-3">Search</button>
                       <button class="column is-2 button button-location is-medium is-primary mr-2 my-3" id="location-button">Search Near Me</button>
-                      <div class="select mr-2 my-3">
+                      <div class="select column is-4 mr-2 my-3">
                         <select id="brewTypeOption">
                           <option value="" disabled selected>Filter by Type of Brewery</option>
                           <option value="micro">Micro</option>
