styled buttons results/index.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div class="field">
                     <label class="label"></label>
                     <div class="control columns is-flex">
-                      <input class="input column is-4 mx-3 my-3" type="" placeholder="Search Breweries by City">
-                      <button class="column is-2 button button-search-city is-rounded has-text-weight-bold is-medium is-warning ml-2 my-3">Search</button>
-                      <button class="column is-2 button button-location is-rounded has-text-weight-bold is-medium is-warning ml-4 my-3" id="location-button">Search Near Me</button>
+                      <input class="input column is-4 m-4 p-5" type="" placeholder="Search Breweries by City">
+                      <button class="column is-2 button button-search-city is-rounded has-text-weight-bold is-medium is-warning p-2 mt-4 ml-2 my-3">Search</button>
+                      <button class="column is-2 button button-location is-rounded has-text-weight-bold is-medium is-warning p-2 mt-4 ml-4 my-3" id="location-button">Search Near Me</button>
                       <div class="select select is-large ml-5 my-3">
                         <select class="" id="brewTypeOption">
                           <option value="" disabled selected>Filter by Type of Brewery</option>
@@ -41,7 +41,7 @@
                         </select>
                       </div>
 
-                      <div class="brewData has-text-left"></div>
+                      <div class="brewData has-text-left p-2"></div>
                     </div>
                   </div>
                 </form>
