--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="field">
                     <label class="label"></label>
                     <div class="control columns is-flex">
-                      <input class="input column is-4 m-4 p-5" type="" placeholder="Search Breweries by City">
+                      <input class="input column is-5 m-4 p-5" type="text" placeholder="Search Breweries by City">
                       <button class="column is-2 button button-search-city is-rounded has-text-weight-bold is-medium is-warning p-2 mt-4 ml-2 my-3">Search</button>
                       <button class="column is-2 button button-location is-rounded has-text-weight-bold is-medium is-warning p-2 mt-4 ml-4 my-3" id="location-button">Search Near Me</button>
                       <div class="select select is-large ml-5 my-3">
