--- a/results.html
+++ b/results.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./assets/css/results.css">
 </head>
 <body>
-   <div class="is-flex">
-    <div class="has-background-grey">
+   <div class="is-flex columns">
+    <div class="column is-half has-background-grey">
       <!-- <form class="box" id="brewContainer"> -->
       <div class="has-background-grey">
         <form class="box" id="brewContainer">
@@ -56,14 +56,15 @@
       <section >
       </section>
     </div>
-    <div class="column" id="entireBox">
+    <div class="column is-half" id="entireBox">
       <div class="box">
       <h1 class="weatherHeader">Weather Conditions</h1>
       <section id="weatherContainer">
           <div class="weatherData"></div>
           <div class="forecastData"></div>
-          </div>
+          
       </section>
+
     </div>
   </div>  
     </div>  
