--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+  <!--welcome page container-->
     <section class="hero is-danger is-fullheight" id="welcomeSection">
         <div class="hero-body">
           <div class="box is-align-items-center">
@@ -23,11 +24,13 @@
                 <div class="field">
                     <label class="label"></label>
                     <div class="control columns is-flex">
+                      <!--search functions include user input, search near me button and a drop down menu of types of breweries-->
                       <input class="input column is-4 m-4 p-5" type="" placeholder="Search Breweries by City">
                       <button class="column is-2 button button-search-city is-rounded has-text-weight-bold is-medium is-warning p-2 mt-4 ml-2 my-3">Search</button>
                       <button class="column is-2 button button-location is-rounded has-text-weight-bold is-medium is-warning p-2 mt-4 ml-4 my-3" id="location-button">Search Near Me</button>
                       <div class="select select is-large ml-5 my-3">
                         <select class="" id="brewTypeOption">
+                          <!--drop down menu filtering brewery types-->
                           <option value="" disabled selected>Filter by Type of Brewery</option>
                           <option value="micro">Micro</option>
                           <option value="nano">Nano</option>
