--- a/results.html
+++ b/results.html
@@ -23,10 +23,10 @@
             <label class="label"></label>
             <div class="control">
               <input class="input" type="text" placeholder="Search Breweries">
-              <span class="columns">
-              <button class="column is-warning is-2 pr-1 pl-1 pb-1 pt-1 button is-rounded ml-4 mt-4 is-medium is-primary has-text-weight-bold" id="city-button">Search</button>
-              <button class="column is-warning is-2 pr-1 pl-1 pb-1 pt-1 button is-rounded mt-4 ml-2 button-location is-medium is-primary has-text-centered has-text-weight-bold" id="location-button">Near Me</button>
-              <div class="select column is-5 mt-2">
+              <span class="columns is-justify-content-center pr-5">
+              <button class="column is-warning is-3 pr-1 pl-1 pb-1 pt-1 button is-rounded ml-4 mt-4 is-medium is-primary has-text-weight-bold" id="city-button">Search</button>
+              <button class="column is-warning is-3 pr-1 pl-1 pb-1 pt-1 button is-rounded mt-4 ml-2 button-location is-medium is-primary has-text-centered has-text-weight-bold" id="location-button">Near Me</button>
+              <div class="select column is-3 mt-2">
                 <select id="brewTypeOption">
                   <option value="" disabled selected>Filter by Type of Brewery</option>
                   <option value="micro">Micro</option>
